Fixing some text alignment

--- a/project-master/src/components/Login.css
+++ b/project-master/src/components/Login.css
@@ -67,6 +67,7 @@
     margin-top: 27px;
     color: #797979;
     font-size: 18px;
+    text-align: center;
  }
 
  .forgot-password span{
